update contact_forms styling to provide padding within text area and remove margin-top from submit button to prevent the invisible element from missing its click events

--- a/app/assets/stylesheets/contact_forms.css.scss
+++ b/app/assets/stylesheets/contact_forms.css.scss
@@ -5,8 +5,5 @@
 textarea#contact_form_message {
   height: 150px;
   width: 100%;
+  padding: 5px;
 }
-
-#email-submit-button {
-  margin-top: 10px;
-}    
